统一common 模块集成redis 不同模块引入common使用不同模块redis配置成功

--- a/hello-spring-cloud-alibaba-common/pom.xml
+++ b/hello-spring-cloud-alibaba-common/pom.xml
@@ -50,11 +50,12 @@
         </dependency>
         <!-- Commons Begin -->
 
+        <!-- redis -->
         <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-extension</artifactId>
-            <version>3.4.1</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+
     </dependencies>
 
 
