--- a/hello-spring-cloud-alibaba-nacos-provider/pom.xml
+++ b/hello-spring-cloud-alibaba-nacos-provider/pom.xml
@@ -70,11 +70,11 @@
             <version>1.0.29</version>
         </dependency>-->
 
-        <!--<dependency>
+        <dependency>
             <groupId>org.example</groupId>
             <artifactId>hello-spring-cloud-alibaba-common</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>-->
+        </dependency>
     </dependencies>
 
     <build>
