新增 统一公共controller 直接继承处理

--- a/hello-spring-cloud-alibaba-nacos-provider/src/main/resources/application.yml
+++ b/hello-spring-cloud-alibaba-nacos-provider/src/main/resources/application.yml
@@ -31,3 +31,7 @@ spring:
     password:
     timeout: 60000
 
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl #开启sql日志
+
