--- a/hello-spring-cloud-alibaba-common/pom.xml
+++ b/hello-spring-cloud-alibaba-common/pom.xml
@@ -56,6 +56,13 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
 
+        <!-- mybatis-plus 整合依赖 -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+            <version>3.4.1</version>
+        </dependency>
+
     </dependencies>
 
 
