--- a/hello-spring-cloud-alibaba-nacos-provider/pom.xml
+++ b/hello-spring-cloud-alibaba-nacos-provider/pom.xml
@@ -75,6 +75,18 @@
             <artifactId>hello-spring-cloud-alibaba-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <!-- swagger -->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.9.2</version>
+        </dependency>
     </dependencies>
 
     <build>
